@@ -45,15 +45,15 @@ public class OAuth10aService extends OAuthService {
     }
 
     public OAuth1RequestToken getRequestToken() throws IOException, InterruptedException, ExecutionException {
-        log("obtaining request token from " + api.getRequestTokenEndpoint());
+        log("obtaining request token from %s", api.getRequestTokenEndpoint());
         final OAuthRequest request = prepareRequestTokenRequest();
 
         log("sending request...");
         final Response response = execute(request);
         final String body = response.getBody();
 
-        log("response status code: " + response.getCode());
-        log("response body: " + body);
+        log("response status code: %s", response.getCode());
+        log("response body: %s", body);
         return api.getRequestTokenExtractor().extract(response);
     }
 
@@ -62,7 +62,7 @@ public class OAuth10aService extends OAuthService {
     }
 
     public Future<OAuth1RequestToken> getRequestTokenAsync(OAuthAsyncRequestCallback<OAuth1RequestToken> callback) {
-        log("async obtaining request token from " + api.getRequestTokenEndpoint());
+        log("async obtaining request token from %s", api.getRequestTokenEndpoint());
         final OAuthRequest request = prepareRequestTokenRequest();
         return execute(request, callback, new OAuthRequest.ResponseConverter<OAuth1RequestToken>() {
             @Override
@@ -78,7 +78,7 @@ public class OAuth10aService extends OAuthService {
         if (callback == null) {
             callback = OAuthConstants.OOB;
         }
-        log("setting oauth_callback to " + callback);
+        log("setting oauth_callback to %s", callback);
         request.addOAuthParameter(OAuthConstants.CALLBACK, callback);
         addOAuthParams(request, "");
         appendSignature(request);
@@ -97,12 +97,12 @@ public class OAuth10aService extends OAuthService {
         }
         request.addOAuthParameter(OAuthConstants.SIGNATURE, getSignature(request, tokenSecret));
 
-        log("appended additional OAuth parameters: " + request.getOauthParameters());
+        log("appended additional OAuth parameters: %s", request.getOauthParameters());
     }
 
     public OAuth1AccessToken getAccessToken(OAuth1RequestToken requestToken, String oauthVerifier)
             throws IOException, InterruptedException, ExecutionException {
-        log("obtaining access token from " + api.getAccessTokenEndpoint());
+        log("obtaining access token from %s", api.getAccessTokenEndpoint());
         final OAuthRequest request = prepareAccessTokenRequest(requestToken, oauthVerifier);
         final Response response = execute(request);
         return api.getAccessTokenExtractor().extract(response);
@@ -113,8 +113,8 @@ public class OAuth10aService extends OAuthService {
     }
 
     /**
-     * Start the request to retrieve the access token. The optionally provided
-     * callback will be called with the Token when it is available.
+     * Start the request to retrieve the access token. The optionally provided callback will be called with the Token
+     * when it is available.
      *
      * @param requestToken request token (obtained previously or null)
      * @param oauthVerifier oauth_verifier
@@ -123,7 +123,7 @@ public class OAuth10aService extends OAuthService {
      */
     public Future<OAuth1AccessToken> getAccessTokenAsync(OAuth1RequestToken requestToken, String oauthVerifier,
             OAuthAsyncRequestCallback<OAuth1AccessToken> callback) {
-        log("async obtaining access token from " + api.getAccessTokenEndpoint());
+        log("async obtaining access token from %s", api.getAccessTokenEndpoint());
         final OAuthRequest request = prepareAccessTokenRequest(requestToken, oauthVerifier);
         return execute(request, callback, new OAuthRequest.ResponseConverter<OAuth1AccessToken>() {
             @Override
@@ -137,19 +137,19 @@ public class OAuth10aService extends OAuthService {
         final OAuthRequest request = new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint());
         request.addOAuthParameter(OAuthConstants.TOKEN, requestToken.getToken());
         request.addOAuthParameter(OAuthConstants.VERIFIER, oauthVerifier);
-        log("setting token to: " + requestToken + " and verifier to: " + oauthVerifier);
+        log("setting token to: %s and verifier to: %s", requestToken, oauthVerifier);
         addOAuthParams(request, requestToken.getTokenSecret());
         appendSignature(request);
         return request;
     }
 
     public void signRequest(OAuth1AccessToken token, OAuthRequest request) {
-        log("signing request: " + request.getCompleteUrl());
+        log("signing request: %s", request.getCompleteUrl());
 
         if (!token.isEmpty() || api.isEmptyOAuthTokenParamIsRequired()) {
             request.addOAuthParameter(OAuthConstants.TOKEN, token.getToken());
         }
-        log("setting token to: " + token);
+        log("setting token to: %s", token);
         addOAuthParams(request, token.getTokenSecret());
         appendSignature(request);
     }
@@ -160,8 +160,7 @@ public class OAuth10aService extends OAuthService {
     }
 
     /**
-     * Returns the URL where you should redirect your users to authenticate your
-     * application.
+     * Returns the URL where you should redirect your users to authenticate your application.
      *
      * @param requestToken the request token you need to authorize
      * @return the URL where you should redirect your users
@@ -175,8 +174,8 @@ public class OAuth10aService extends OAuthService {
         final String baseString = api.getBaseStringExtractor().extract(request);
         final String signature = api.getSignatureService().getSignature(baseString, getApiSecret(), tokenSecret);
 
-        log("base string is: " + baseString);
-        log("signature is: " + signature);
+        log("base string is: %s", baseString);
+        log("signature is: %s", signature);
         return signature;
     }
 
@@ -205,9 +204,9 @@ public class OAuth10aService extends OAuthService {
         return api;
     }
 
-    public void log(String message) {
+    public void log(String messagePattern, Object... params) {
         if (debugStream != null) {
-            message += '\n';
+            final String message = String.format(messagePattern, params) + '\n';
             try {
                 debugStream.write(message.getBytes("UTF8"));
             } catch (IOException | RuntimeException e) {
